# notifwire

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md
.gitea/workflows/: ci.yml
.github/: CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: package-lock.json  package.json  svelte.config.js  vite.config.ts
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/routes/: +layout.ts  +page.svelte
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/consumer/: Cargo.toml
crates/consumer-win/: Cargo.toml
crates/consumer-win/examples/: show_toast.rs
crates/consumer-win/src/: lib.rs  stub.rs  windows_impl.rs
crates/consumer-win/tests/: display_loopback.rs
crates/consumer/src/: history.rs  lib.rs  main.rs
crates/consumer/tests/: e2e.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  config.rs  dedup.rs  health.rs  icon.rs  lib.rs  notification.rs  rules.rs  sink.rs
crates/observe/: Cargo.toml
crates/observe/src/: lib.rs
crates/producer/: Cargo.toml
crates/producer-win/: Cargo.toml
crates/producer-win/src/: lib.rs  stub.rs  windows_impl.rs
crates/producer/src/: main.rs
crates/transport/: Cargo.toml
crates/transport/src/: error.rs  lib.rs  mesh.rs  outbox.rs  persist.rs  sse.rs
docs/: BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  CodeOfConduct.md  DEVELOPMENT.md  FAQ.md  JOURNEY.md  PHILOSOPHY.md  SPEC.md  architecture.md  index.html  plugins.md  setup.md  why.md  windows-notification-capture.md
