[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/observe",
    "crates/transport",
    "crates/cli",
    "crates/consumer",
    "crates/producer",
    "crates/producer-win",
    "crates/consumer-win",
    "app/src-tauri",
]
# Keep this list in dependency order; the Tauri desktop app comes last.

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/allenbina/notifwire"
authors = ["allenbina"]
rust-version = "1.82"

# Shared dependency versions. Crates opt in with `serde.workspace = true`, etc.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Observability: a single facade (tracing) across all crates, with each binary
# fanning logs out to stderr + a rotating daily file (see crates/observe).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"

# Workspace-wide lints. CI runs `cargo clippy -- -D warnings`, so anything
# below at `warn` is a hard error in CI. Crates opt in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "deny"          # individual crates that need it (producer-win, tauri) override locally
unused = { level = "warn", priority = -1 }   # lint group — needs priority so specifics can override
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
