[package]
name = "notifwire-consumer-win"
description = "notifwire Windows native display — render notifications as WinRT toasts."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# Not opted into the workspace lints: the windows-crate / WinRT surface trips
# the stricter rust lints. Still covered by `clippy -D warnings`.

[dependencies]
notifwire-core = { path = "../core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_UI_Shell",
] }
winreg = "0.52"

# For the display<->capture self-test (tests/display_loopback.rs): show a toast,
# then capture it back via producer-win and assert — no human eyes needed.
[target.'cfg(windows)'.dev-dependencies]
notifwire-producer-win = { path = "../producer-win" }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
winreg = "0.52"
