[package]
name = "notifwire-core"
description = "notifwire core: notification data model, config schema, and rules engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# For async trait tests (SyntheticSource); test-only, not a runtime dep of core.
tokio = { workspace = true, features = ["macros"] }
