[package]
name = "notifwire-producer"
description = "notifwire producer node — runs the SSE server (events + localhost ingest)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "notifwire-producer"
path = "src/main.rs"

[dependencies]
notifwire-core = { path = "../core" }
notifwire-transport = { path = "../transport" }
notifwire-producer-win = { path = "../producer-win" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
